example/errors/interpret/lit_out_of_range.box
//set a: int = 43215321432412344321;
set a: int = -9223372036854775808;
